# scribear

./: .dockerignore  .env.example  .gitignore  .npmrc  RELEASING.md  build-containers.sh  docker-compose.local.yml  eslint.config.js  local-dev.env.example  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.base.json  vitest.config.ts  vitest.shared.ts
transcription_service/: .editorconfig  .gitignore  Dockerfile_CPU  Dockerfile_CUDA  Makefile  provider_config.template.json  pyproject.toml  run.sh  template.env
transcription_service/src/: index.py
transcription_service/src/shared/config/: __init__.py  config.py
transcription_service/src/shared/logger/: __init__.py  context_logger.py  create_logger.py  log_level_map.py  logger_types.py
transcription_service/src/shared/logger/formatters/: json_formatter.py  pretty_print_formatter.py
transcription_service/src/shared/utils/audio_decoder/: __init__.py  audio_decoder.py
transcription_service/src/shared/utils/event_emitter/: __init__.py  event_emitter.py
transcription_service/src/shared/utils/latency_track/: __init__.py  latency_tracker.py
transcription_service/src/shared/utils/local_agree/: __init__.py  local_agree.py
transcription_service/src/shared/utils/np_circular_buffer/: __init__.py  np_circular_buffer.py
transcription_service/src/shared/utils/silence_filter/: __init__.py  rms_silence_detection.py  silence_filter.py
transcription_service/src/shared/utils/worker_pool/: __init__.py  job_context_interface.py  job_interface.py  job_result.py  result.py  task.py  worker_log_handler.py  worker_pool.py  worker_process.py  worker_process_manager.py  worker_state.py
transcription_service/src/transcription_contexts/faster_whisper_context/: __init__.py  faster_whisper_context.py
transcription_service/src/transcription_contexts/silero_vad_context/: __init__.py  silero_vad_context.py
transcription_service/src/transcription_provider_interface/: __init__.py  transcription_client_error.py  transcription_provider_interface.py  transcription_result.py  transcription_sequence.py  transcription_session_interface.py
transcription_service/src/transcription_providers/debug_provider/: __init__.py  debug_provider.py  debug_provider_job.py  debug_session_config.py
transcription_service/src/transcription_providers/whisper_streaming_provider/: __init__.py  whisper_streaming_config.py  whisper_streaming_job.py  whisper_streaming_provider.py
transcription_service/src/webserver/: __init__.py  create_webserver.py
transcription_service/src/webserver/features/healthcheck/: __init__.py  healthcheck_router.py
transcription_service/src/webserver/features/transcription_stream/: __init__.py  transcription_stream_controller.py  transcription_stream_router.py
transcription_service/src/webserver/shared/auth_service/: __init__.py  auth_service.py
transcription_service/src/webserver/shared/json_server_message/: __init__.py  json_server_message.py
transcription_service/src/webserver/shared/transcription_service/: __init__.py  transcription_service.py
transcription_service/src/webserver/shared/websocket_handler/: __init__.py  websocket_handler.py
transcription_service/tests/integration/healthcheck/: healthcheck_test.py
transcription_service/tests/integration/transcription_stream/: transcription_stream_test.py
transcription_service/tests/unit/shared/config/: config_test.py
transcription_service/tests/unit/shared/logger/: context_logger_test.py  create_logger_test.py
transcription_service/tests/unit/shared/utils/worker_pool/: jobs.py  (+3 more)
transcription_service/tests/unit/transcription_providers/debug_provider/: debug_provider_test.py
(+1019 files in other folders)
