[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scribear_transcription_service"
version = "0.0.1"
authors = [{ name = "scribear" }]
description = "ScribeAR Server backend transcription service"
requires-python = ">=3.12"
dependencies = [
    # Type validation
    "pydantic==2.12.0",

    # Configuration
    "python-dotenv==1.1.1",

    # Log coloring
    "colorama==0.4.6",

    # Web server
    "fastapi==0.119.0",
    "starlette==0.48.0",
    "httpx==0.28.1",
    "uvicorn==0.37.0",
    "websockets==15.0.0",
    "requests==2.32.5",

    # Audio decoding
    "soundfile==0.13.1",
    "numpy==2.3.3",

    # Multi process management
    "multiprocess==0.70.18",
]

[project.optional-dependencies]
# Optional dependencies used for development
# Install them with `pip install -e .[dev]`
dev = [
    # Hot reload
    "watchfiles==1.1.0",

    # Unit testing and coverage
    "pytest==8.4.2",
    "coverage==7.11.0",
    "pytest-asyncio==1.2.0",
    "pytest-mock==3.15.1",
    "pytest-timeout==2.4.0",
    "pytest-order==1.3.0",
    "freezegun==1.5.5",

    # Code linting and formatting
    "black==25.9.0",
    "isort==7.0.0",
    "pylint==4.0.0",

    # Type hinting
    "multiprocess-stubs==0.1.0",
]
# Optional dependencies used by faster-whisper
# Install them with `pip install -e .[faster-whisper]`
faster-whisper = ["ctranslate2==4.4.0", "faster-whisper==1.1.0"]

[project.urls]
Homepage = "https://github.com/scribear/ScribeAR-NodeServer"
Issues = "https://github.com/scribear/ScribeAR-NodeServer/issues"

# Installation config
[tool.setuptools.packages]
# Have setuptools look for packages in transcription_service root dir
find = { where = ["."] }

# Formatter config
[tool.black]
line-length = 80
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"

# Linter config
[tool.pylint.main]
fail-under = 9.0
disable = "too-few-public-methods,too-many-arguments,too-many-positional-arguments,too-many-instance-attributes"

# Testing config
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
timeout = 1
